--- a/SoftwareEngineeringProject/src/main/resources/com/mycompany/softwareengineeringproject/home.fxml
+++ b/SoftwareEngineeringProject/src/main/resources/com/mycompany/softwareengineeringproject/home.fxml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Button?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.softwareengineeringproject.Controller.HomeController">
-   <children>
-      <Label text="Primary View" />
-      <Button fx:id="primaryButton" text="Create a new Rule" onAction="#switchToSecondary"/>
-   </children>
-   <padding>
-      <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-   </padding>
+<VBox alignment="TOP_CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.softwareengineeringproject.Controller.HomeController">
+    <children>
+        <Label text="RULE ENGINE" style="-fx-font-size: 24px; -fx-font-weight: bold;" />
+        
+        <Button text="+ Create a New Rule" onAction="#onNewRuleClick" style="-fx-font-size: 14px; -fx-background-color: #4CAF50; -fx-text-fill: white;" maxWidth="400.0"/>
+        
+        <ListView fx:id="rulesListView" VBox.vgrow="ALWAYS" maxWidth="400.0"/>
+        
+    </children>
+    <padding>
+        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+    </padding>
 </VBox>
