--- a/SoftwareEngineeringProject/src/main/resources/createRule.fxml
+++ b/SoftwareEngineeringProject/src/main/resources/createRule.fxml
@@ -23,6 +23,7 @@
                 <TextField fx:id="nameField" />
                 <Label text="Select Trigger:" styleClass="section-label"/>
                 <fx:include source="TriggerSection.fxml" fx:id="triggerSection"/> 
+                <!-- the previous line of code is used to include in this file another fxml file -->
                 <Button text="Save Rule" onAction="#onSaveClick" styleClass="success-button" />
             </children>
         </VBox>
