--- a/SoftwareEngineeringProject/src/main/resources/TriggerSection.fxml
+++ b/SoftwareEngineeringProject/src/main/resources/TriggerSection.fxml
@@ -21,9 +21,8 @@
                   maxWidth="500"
         />
 
-        <HBox spacing="10" styleClass="main-container">
-            <Spinner fx:id="hourSpinner" prefWidth="100" visible="false"/>
-            <Spinner fx:id="minuteSpinner" prefWidth="100" visible="false"/>
-        </HBox>
+        <StackPane styleClass="main-container" fx:id="dynamicContainer">
+        <!-- In this StackPane will be included all the feature based on the selected trigger -->
+        </StackPane>
 
     </VBox>
